// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkNudger should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(7, 112, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(7, 112, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is a not an integer 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessibilityRole="button"
      accessibilityStates={
        Array [
          "disabled",
        ]
      }
      accessible={true}
      focusable={false}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(221, 221, 229)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 178, 191)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(7, 112, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is greater than max 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(7, 112, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessibilityRole="button"
      accessibilityStates={
        Array [
          "disabled",
        ]
      }
      accessible={true}
      focusable={false}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(221, 221, 229)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 178, 191)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is less than min 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessibilityRole="button"
      accessibilityStates={
        Array [
          "disabled",
        ]
      }
      accessible={true}
      focusable={false}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(221, 221, 229)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 178, 191)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(221, 221, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(7, 112, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
